--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "127.0.0.1:${POSTGRES_PORT:-5432}:5432"
 
 
   backend:
@@ -33,15 +33,26 @@ services:
     environment:
       - POSTGRES_SERVER=db 
     ports:
-      - "8000:8000"
+      - "127.0.0.1:8000:8000"
     command: fastapi run app/main.py --host 0.0.0.0 --port 8000 --workers 1
+
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #     args:
+  #       - VITE_API_URL=${VITE_API_URL}
+  #   container_name: fashion_frontend
+  #   restart: always
+  #   ports:
+  #     - "127.0.0.1:5173:80"
 
   adminer:
     image: adminer
     restart: always
     container_name: fashion_adminer
     ports:
-      - "8080:8080"
+      - "127.0.0.1:8080:8080"
     environment:
       - ADMINER_DESIGN=pepa-linha-dark
     depends_on:
